fix: improve InfoModal background opacity and enhance marker visibility logic

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,3 +22,6 @@ a:hover {
   background-color: hsla(160, 100%, 37%, 0.2);
 }
 
+.leaflet-top, .leaflet-left {
+  display: none;
+}
